--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.1.4",
+    "mongoose": "^7.3.0",
     "node-telegram-bot-api": "^0.61.0",
     "nodemon": "^2.0.22"
   }
